--- a/miarma/pom.xml
+++ b/miarma/pom.xml
@@ -88,11 +88,32 @@
             <artifactId>swagger-annotations</artifactId>
             <version>2.1.11</version>
         </dependency>
-		<dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt</artifactId>
-			<version>0.9.1</version>
-		</dependency>
+
+	<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl -->
+	<dependency>
+		<groupId>io.jsonwebtoken</groupId>
+		<artifactId>jjwt-impl</artifactId>
+		<version>0.11.1</version>
+		<scope>runtime</scope>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
+	<dependency>
+		<groupId>io.jsonwebtoken</groupId>
+		<artifactId>jjwt-api</artifactId>
+		<version>0.11.1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson -->
+	<dependency>
+		<groupId>io.jsonwebtoken</groupId>
+		<artifactId>jjwt-jackson</artifactId>
+		<version>0.11.1</version>
+		<scope>runtime</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-ui</artifactId>
+		<version>1.5.2</version>
+	</dependency>
 
 	</dependencies>
 
