--- a/miarma/src/main/resources/errores.properties
+++ b/miarma/src/main/resources/errores.properties
@@ -1,11 +1,10 @@
-category.name.null = "La categoría no puede ser nula"
-category.name.blank = "La categoría debe tener nombre"
 
-POI.name.null = "El POI no puede ser nulo"
-POI.name.blank = "El POI debe tener nombre"
-POI.location.null = "La ubicación no puede ser nula"
-POI.location.blank = "La ubicación no puede ser nula"
-POI.category.null = " Un POI debe pertenecer a una categoría"
-POI.category.blank = " Un POI debe pertenecer a una categoría"
-POI.coverPhoto.null = "Un POI debe tener una foto asociada"
-POI.coverPhoto.blank = "Un POI debe tener una foto asociada"
+UserEntity.nickname.null = "El nickname no puede ser nulo"
+UserEntity.nickname.blank =" El nickname no puede estar vacío"
+
+UserEntity.email.null = "El email no puede ser nulo"
+UserEntity.email.blank = "El email no puede estar vacío"
+
+UserEntity.password.null = "La contraseña no puede ser nula"
+UserEntity.password.blank = "La contraseña no puede estar vacío"
+
